<resources>
    <string name="app_name">My Rhythm</string>
    <string name="str_yi">一</string>
    <string name="imvDscp_logo">just a logo.</string>
    <string name="app_name_2">程序：节奏库</string>
    <string name="author_plus_name">created by 杨镇时</string>
    <string name="author_info_1">yangsheng@ouc.edu.cn</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_mostUsingRhythm_2">置顶及最近修改的节奏</string>
    <string name="psh_totalRhythmAmount">当前共有%1$d条节奏记录</string>
    <string name="str_toAllRhythms">查看所有</string>
    <string name="str_Rhythms">Rhythms!</string>
    <string name="bar_star_bar">———☆———</string>
    <string name="alpha_testing_string">（工程测试·α）</string>
    <string name="hold_for_loading">正则加载数据，请稍候……</string>
    <string name="str_pitchSerial_add">创作一组\n使用默认节奏的音高序列</string>
    <string name="str_wordsSerial_add">词创作</string>
    <string name="str_rhythm_add">新增一条节奏记录</string>
    <string name="add_rhythm_step_1">新增节奏（步骤1/3）</string>
    <string name="chooseRhythmType">选择节奏类型</string>
    <string name="add_rhythm_info_1">请选择适当的节奏类型。</string>
    <string name="rhythmType">节拍形式</string>
    <string name="str_2_over4">2/4</string>
    <string name="str_3_over4">3/4</string>
    <string name="str_4_over4">4/4</string>
    <string name="str_3_over8">3/8</string>
    <string name="str_6_over8">6/8</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="str_addRhythm_edit">新增节奏-编辑（步骤2/3）</string>
    <string name="str_sharp2">##</string>
    <string name="num_3">3</string>
    <string name="lastSection">←上一节</string>
    <string name="nextSection">下一节→</string>
    <string name="lastUnit">←上一音符</string>
    <string name="nextUnit">下一音符→</string>
    <string name="input">输入</string>
    <string name="num_2">2</string>
    <string name="remove">移除</string>
    <string name="zero">0</string>
    <string name="add_emptySection">新增一节+</string>
    <string name="str_addRhythm_step3">新增节奏（步骤3/3）</string>
    <string name="beatType">节拍类型</string>
    <string name="sharpOverSharp">#/#</string>
    <string name="descriptionInput">输入描述</string>
    <string name="descriptionHere">在此输入描述</string>
    <string name="primaryLyric">是否原创</string>
    <string name="keepTop">是否置顶</string>
    <string name="stars_rating">星级选择</string>
    <string name="finalCheck">请填入最后所需的信息，点击确定后将提交。</string>
    <string name="add_rhythm_finish_ok">新增旋律成功</string>
    <string name="add_rhythm_finish_false">失败</string>
    <string name="add_rhythm_final_report">新增节奏完成</string>
    <string name="str_sharp8">########</string>
    <string name="plh_sharp_id">#%1$d</string>
    <string name="selfDesign">原创</string>
    <string name="keepTop2">置顶</string>
    <string name="plh_stars_num">级别：%1$d</string>
    <string name="linkingPitchesAndLyrics">关联的音序和歌词</string>
    <string name="rhythmDetail">节奏详情</string>
    <string name="descriptions">描述信息</string>
    <string name="confirm_delete">确认删除</string>
    <string name="confirm_delete_2">请注意：点击确定后将执行删除！</string>
    <string name="linkingPitches">关联的音序</string>
    <string name="clickToSave">点击确定保存所做的修改</string>
    <string name="str_save">保存</string>
    <string name="str_Rhythm_edit">编辑节奏</string>
    <string name="clickToEdit">点击进入修改页面</string>
    <string name="modify">修改</string>
    <string name="clickToEditRh">编码</string>
    <string name="auto_record">修改时间：自动记录</string>
    <string name="input_title">填入标题</string>
    <string name="all_rhythms">所有节奏</string>
    <string name="plh_rh_type">类型：%1$d</string>
    <string name="plh_beat_value">基本拍子(X)值=%1$d</string>
    <string name="plh_section_value">小节总值=%1$d</string>
    <string name="plh_currentPlaceRest_value">当前位置可用总值=%1$d</string>
    <string name="allGroups">所有分组</string>
    <string name="all_groups">所有分组</string>
    <string name="all_resources">所有资源（通用标题）</string>
    <string name="zone_divide">拆分区</string>
    <string name="over_4">4分</string>
    <string name="over_2">2分</string>
    <string name="odd_divide">奇数均分</string>
    <string name="over_5">5</string>
    <string name="over_3">3</string>
    <string name="over_7">7</string>
    <string name="zone_merge">合并</string>
    <string name="merge_left"><![CDATA[+<<]]></string>
    <string name="merge_right"><![CDATA[>>+]]></string>
    <string name="merge_both_side">双向合并</string>
    <string name="zone_short_cut">快捷</string>
    <string name="divideCode">切分音</string>
    <string name="toHavePoint">附+余</string>
    <string name="lastSection_2"><![CDATA[<<|]]></string>
    <string name="nextSection_2"><![CDATA[|>>]]></string>
    <string name="lastUnit_2"><![CDATA[<]]></string>
    <string name="nextUnit_2"><![CDATA[>]]></string>
    <string name="this_beat">整拍</string>
    <string name="defaultArea_1">预留区域：特殊按键1</string>
    <string name="defaultArea_2">预留区域：特殊按键2</string>
    <string name="defaultArea_pitches">预留区域：音高输入面板</string>
    <string name="defaultArea_bottomInfo">底部信息预留</string>
    <string name="groupDetail">分组详情</string>
    <string name="resourceOfGroup">组内资源</string>
    <string name="linkingRyhythms">组内节奏记录</string>
    <string name="linkingLyrics">词记录</string>
    <string name="linkingPitches_2">音高序列</string>
    <string name="plh_groupAllInfo_GDA">本组统计：节奏%1$d条，词%2$d条，音高%3$d条。</string>
    <string name="removeByLongClick">在详情页中长按来移除节奏记录</string>
    <string name="remove_from_group">从分组移除</string>
    <string name="remove_from_group_2">点击确定后，从分组移除本记录。\n(并不删除)</string>
    <string name="lyricDetail">词作详情</string>
    <string name="auto_create">修改时间\n（自动生成）</string>
    <string name="allRhythms">所有节奏</string>
    <string name="allModels">所有资源</string>
    <string name="ryhythm">节奏</string>
    <string name="lyrics">词</string>
    <string name="merge">合并</string>
    <string name="move_zone">移动操作区：</string>
    <string name="expand_pitches">音高输入面板\n（点击展开）</string>
    <string name="zone_pitches_input">音高输入</string>
    <string name="code_1sharp">1#</string>
    <string name="code_2sharp">2#</string>
    <string name="code_4sharp">4#</string>
    <string name="code_5sharp">5#</string>
    <string name="code_6sharp">6#</string>
    <string name="code_1">1</string>
    <string name="code_2">2</string>
    <string name="code_3">3</string>
    <string name="code_4">4</string>
    <string name="code_5">5</string>
    <string name="code_6">6</string>
    <string name="code_7">7</string>
    <string name="zone_special">特别</string>
    <string name="code_0">0</string>
    <string name="code_Bar">-</string>
    <string name="preFix">缀</string>
    <string name="zone_move_merge_curve">连音弧+/选区合并/移动控制</string>
    <string name="curve">弧</string>
    <string name="str_S">S</string>
    <string name="str_E">E</string>
    <string name="merge_x2">2x</string>
    <string name="merge_4x">4x</string>
    <string name="str_Mx">Mx</string>
    <string name="action">执行</string>
    <string name="str_ok">OK</string>
    <string name="merge_start">[.合</string>
    <string name="merge_end">并.]</string>
    <string name="addSection">节·新增</string>
    <string name="select_start">[S.</string>
    <string name="select_end">E.]</string>
    <string name="zone_selection">选区操作</string>
    <string name="copy">复制</string>
    <string name="code_X">X</string>
    <string name="zone_move_select">移动和选区</string>
    <string name="mode">模式</string>
    <string name="singleCode">1x.</string>
    <string name="singleBeat">1Bt</string>
    <string name="doubleBeats">2Bt</string>
    <string name="vb_over_2">Bt./2</string>
    <string name="vb_over_3">Bt./3</string>
    <string name="singlePoint">单点转换</string>
    <string name="merge_X">合.X</string>
    <string name="merge_zero">合.0</string>
    <string name="str_X">X</string>
    <string name="str_0">0</string>
    <string name="sectionAdd">空节+</string>
    <string name="sectionMinus">空节-</string>
    <string name="translate">单（双）拍变型</string>
    <string name="str_toDv">切分</string>
    <string name="str_withSpot">附点</string>
    <string name="fwd_16">前16</string>
    <string name="str_rd16">后16</string>
    <string name="end">末</string>
    <string name="back_up">--==备·份==--</string>
    <string name="backUp2">备份</string>
    <string name="underDeveloping">功能开发中……</string>
    <string name="local_bak">本地备份</string>
    <string name="remote_bak">服务器备份</string>
    <string name="fileSelectingUI">文件选择控件，待开发……</string>
    <string name="infoPart">信息区</string>
    <string name="plh_currentIndex">单点：节-%1$d；单元-%2$d</string>
    <string name="plh_areaIndex">选区：S[s%1$d-u%2$d]&#8212;E[s%3$d-u%4$d]</string>
    <string name="bar2">--</string>
    <string name="singleSpot">单点模式</string>
    <string name="sectionAddToEnd">新节：末端追加</string>
    <string name="titleHere">标题</string>
    <string name="dots">&#8230;</string>
    <string name="refresh1">Rfh.</string>
    <string name="default1">缺省</string>
    <string name="addGroup">新建分组</string>
    <string name="group">分组</string>
    <string name="plh_groupAmount">共有分组：%1$d个</string>
    <string name="plh_choseRhAmount">已选定节奏：%1$d个</string>
    <string name="groupIsGood">使用分组能够便于管理</string>
    <string name="add">+</string>
    <string name="freeCreate">自由创作</string>
    <string name="hardLink">（节奏）硬关联</string>
    <string name="weakLink">弱关联创作</string>
    <string name="hardLink2">格式、字数与选定的旋律/节奏严格对应。</string>
    <string name="weakLink2">参考选定旋律/节奏的格式、字数进行创作</string>
    <string name="chooseRhythm">选择节奏</string>
    <string name="chose_done">已选定</string>
    <string name="chose_area">备选资源</string>
    <string name="move">移动</string>
    <string name="actionArea">操作区域</string>
    <string name="plh_currentAmount">本句已输入：%1$d字。</string>
    <string name="totalModify">整体修改（需手动同步）</string>
    <string name="syncToRH">↑↑\n同步</string>
    <string name="syncFromRH">↓↓\n同步</string>
    <string name="plh_currentIndex_LY">光标位置：第%1$d乐句中的第%2$d字。</string>
    <string name="phraseStart">句首</string>
    <string name="phraseEnd">句尾</string>
    <string name="duSelect">dU\n选定</string>
    <string name="lastPhrase">上句</string>
    <string name="nextPhrase">下句</string>
    <string name="phraseStartAdd">新增\n句首</string>
    <string name="phraseEndAdd">新增\n句尾</string>
    <string name="singleDuToModify">选定单个位置进行词的改动。\n输入多个字会向后覆盖。</string>
    <string name="deletePhraseTag">Tag\n删</string>
    <string name="deletePhrase2">句删</string>
    <string name="toLeft"><![CDATA[<]]></string>
    <string name="toRight"><![CDATA[>]]></string>
    <string name="select_area">自由\n选区</string>
    <string name="amountResize">容量\n调整</string>
    <string name="phraseAdd_atSelectArea">选区\n新增</string>
    <string name="phraseAddAuto">自动\n新增</string>
    <string name="phrase_structure">乐句结构</string>
    <string name="inputSwitch">输入开关</string>
    <string name="inputCursor">编辑位置选择</string>
    <string name="partConfirmAndInput">输入控制</string>
    <string name="partConfirm_structure">结构\n部分提交</string>
    <string name="partConfirm_input">输入\n部分提交</string>
    <string name="warningForCoveringPME">！所选区域包含不能承载字词的音符位置，请检查</string>
    <string name="autoPhrases">自动\n划分</string>
    <string name="clickToEditLyA">歌词A</string>
    <string name="clickToEditLyB">歌词B</string>
    <string name="str_lyricPhrases_edit">歌词编辑\n（按关联节奏的格式）</string>
    <string name="local_ReCover">本地恢复</string>
    <string name="xXAdd">..X|X</string>
    <string name="xX_delete">|..XX|</string>
    <string name="test">测试</string>
    <string name="plh_fileChose">选定：%1$s，请点击确定→</string>
    <string name="chooseFile">备份文件选择</string>
    <string name="actionWitdCaution">恢复操作将以不可逆方式覆盖现有数据，请谨慎操作！</string>
    <string name="preView">结果预览</string>
    <string name="warning2">请谨慎操作！\n备份覆盖是不可逆的。</string>

</resources>
