<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.EditorFragmentMelody">

    <!--Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:background="#f5f5f5"
        android:gravity="center"
        android:text="@string/phrase_structure" />

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/myRhythm_orange" />

    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/lastPr_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#f1f8e9"
            android:gravity="center"
            android:text="@string/lastPhrase"
            />

        <TextView
            android:id="@+id/nextPr_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#f1f8e9"
            android:gravity="center"
            android:text="@string/nextPhrase"
            />

        <!--分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e0e0e0" />

        <TextView
            android:id="@+id/phraseStart_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/phraseStart" />

        <TextView
            android:id="@+id/phraseEnd_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:text="@string/phraseEnd"
            android:gravity="center"
            />

    </LinearLayout>

    <!--第二行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phraseEntireDelete_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#ff8a80"
            android:gravity="center"
            android:text="@string/deletePhrase2" />
        <!--分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e0e0e0" />

        <TextView
            android:id="@+id/toLeft_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/toLeft" />

        <TextView
            android:id="@+id/toRight_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/toRight" />
        <!--分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e0e0e0" />

        <TextView
            android:id="@+id/phraseAddAuto_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/phraseAddAuto" />


    </LinearLayout>

    <!---->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/deleteTag_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#ffebee"
            android:gravity="center"
            android:text="@string/deletePhraseTag" />

        <!--分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e0e0e0" />
        <TextView
            android:id="@+id/freeSelect_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e8f5e9"
            android:gravity="center"
            android:text="@string/select_area" />

        <TextView
            android:id="@+id/amountResize_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/amountResize" />
        <!--分割线-->
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#e0e0e0" />


        <TextView
            android:id="@+id/phraseAddAtSelectedArea_LE"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#efefef"
            android:gravity="center"
            android:text="@string/phraseAdd_atSelectArea" />
    </LinearLayout>

</LinearLayout>