<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddRhythmDiaFragment">

    <!--撑开宽度。如果没有具体宽度，即使全用match则宽度也按wrap计算-->
    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp" />

    <!--Title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#efefef"
        android:text="@string/add_rhythm_step_1"
        android:textSize="16sp"
        android:gravity="center"
        />

    <!--SubTitle-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="#f5f5f5"
        android:text="@string/chooseRhythmType"
        android:gravity="center"
        />
    <!--横向撑开-->
    <TextView
        android:layout_width="300dp"
        android:layout_height="1dp"
        />
    <!--类型选择-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rhythmType" />

        <!--竖向分割线-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efefefef" />


        <RadioGroup
            android:id="@+id/rg_type_addRhDfg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_24_addRhDfg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:checked="true"
                android:padding="2dp"
                android:text="@string/str_2_over4" />

            <RadioButton
                android:id="@+id/rb_34_addRhDfg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="2dp"
                android:text="@string/str_3_over4" />

            <RadioButton
                android:id="@+id/rb_44_addRhDfg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="2dp"
                android:text="@string/str_4_over4" />

            <RadioButton
                android:id="@+id/rb_38_addRhDfg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="2dp"
                android:text="@string/str_3_over8" />

            <RadioButton
                android:id="@+id/rb_68_addRhDfg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:padding="2dp"
                android:text="@string/str_6_over8" />
        </RadioGroup>

    </LinearLayout>


    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="20dp"
        android:text="@string/add_rhythm_info_1"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#ef5350"

        />

    <!--横分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/myRhythm_red"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        >

        <TextView
            android:id="@+id/btn_cancel_addRhDfg"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="1dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:background="#efefef"
            />

        <TextView
            android:id="@+id/btn_ok_addRhDfg"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="1dp"
            android:text="@string/confirm"
            android:textSize="16sp"
            android:background="#e57373"
            />
    </LinearLayout>


</LinearLayout>