<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.MelodyEditorFragment"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:gravity="center"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/move_zone"
        />
    <!--分割线-->
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:layout_margin="1dp"
        />


    <TextView
        android:id="@+id/tv_lastSection_PEM"
        android:layout_width="42dp"
        android:layout_height="36dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/lastSection_2"
        android:background="#f5f5f5"
        android:layout_marginEnd="1dp"
        />

    <TextView
        android:id="@+id/tv_lastUnit_PEM"
        android:layout_width="42dp"
        android:layout_margin="2dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/lastUnit_2"
        android:layout_marginStart="1dp"
        android:background="#f5f5f5"
        />

    <TextView
        android:id="@+id/tv_nextUnit_PEM"
        android:layout_width="42dp"
        android:layout_margin="2dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/nextUnit_2"
        android:layout_marginStart="1dp"
        android:background="#f5f5f5"
        />


    <TextView
        android:id="@+id/tv_nextSection_PEM"
        android:layout_width="42dp"
        android:layout_margin="2dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/nextSection_2"
        android:layout_marginStart="1dp"
        android:background="#f5f5f5"
        />
    <TextView
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#e0e0e0"
        android:layout_margin="1dp"
        />
    <TextView
        android:id="@+id/tv_beatTotal_PEM"
        android:layout_width="42dp"
        android:layout_margin="2dp"
        android:layout_height="36dp"
        android:gravity="center"
        android:text="@string/this_beat"
        android:layout_marginStart="1dp"
        android:background="#f5f5f5"
        />



</LinearLayout>