<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.MelodyEditorFragment"
    >


    <!--Title-->
    <TextView
        android:id="@+id/tv_title_part"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:background="#f5f5f5"
        android:text="@string/zone_divide"
        android:gravity="center"
        />
    <!--横分割线-->
    <TextView
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/myRhythm_red"
        android:layout_marginTop="22dp"
        />
    <TextView
        android:id="@+id/tv_over_4"
        android:layout_below="@+id/tv_title_part"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:background="#f5f5f5"
        android:text="@string/over_4"
        />
    <TextView
        android:id="@+id/tv_over_2"
        android:layout_below="@+id/tv_title_part"
        android:layout_toRightOf="@id/tv_over_4"
        android:layout_width="48dp"
        android:layout_height="36dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:background="#f5f5f5"
        android:text="@string/over_2"
        />

    <!--sub_title-->
    <TextView
        android:id="@+id/tv_subTitle_multiCode_part"
        android:layout_width="120dp"
        android:layout_height="18dp"
        android:layout_below="@+id/tv_over_4"
        android:background="#f5f5f5"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/odd_divide" />
    <!--横分割线-->
    <TextView
        android:layout_width="120dp"
        android:layout_below="@+id/tv_subTitle_multiCode_part"
        android:layout_height="1dp"
        android:background="@color/myRhythm_cyan" />

    <TextView
        android:id="@+id/tv_over_3"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_below="@+id/tv_subTitle_multiCode_part"
        android:layout_margin="2dp"
        android:background="#f5f5f5"
        android:gravity="center"
        android:text="@string/over_3" />

    <TextView
        android:id="@+id/tv_over_5"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_below="@+id/tv_subTitle_multiCode_part"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_over_3"
        android:background="#f5f5f5"
        android:gravity="center"
        android:text="@string/over_5" />

    <TextView
        android:id="@+id/tv_over_7"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:layout_below="@+id/tv_subTitle_multiCode_part"
        android:layout_margin="2dp"
        android:layout_toRightOf="@+id/tv_over_5"
        android:background="#f5f5f5"
        android:gravity="center"
        android:text="@string/over_7" />


</RelativeLayout>