<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AllGroupsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#efefef"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/all_groups"
            android:textSize="16sp" />

        <TextView
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:text="@string/refresh1"
            android:layout_gravity="end"
            android:gravity="center"
            android:background="#e5e5e5"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            android:onClick="refresh"
            android:textColor="@color/myRhythm_light_green"
            />

    </FrameLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        android:src="@drawable/slash_bar_orange" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/groupIsGood"
        android:gravity="center"
        android:textColor="@color/myRhythm_orange"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_gpAmount_RVFP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plh_groupAmount" />

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:background="@color/myRhythm_teal"
            android:gravity="center"
            android:onClick="createGroup"
            android:text="@string/addGroup" />

        <TextView
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:background="@color/myRhythm_orange"
            android:gravity="center"
            android:text="@string/default1" />


    </LinearLayout>

    <!--分割线-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efefef"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--带遮盖效果的tv-->
        <TextView
            android:id="@+id/tv_mask_RVGP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/hold_for_loading"
            android:textSize="16sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_all_rhythms_RVGP"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </FrameLayout>

</LinearLayout>